change gtest to git

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,11 +32,11 @@ tokio.workspace = true
 members = ["io"]
 
 [workspace.dependencies]
-gstd = "1.4.1"
-gmeta = "1.4.1"
-gear-wasm-builder = "1.4.1"
-gtest = "1.4.1"
-gclient = "1.4.1"
+gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
+gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
+gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
+gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
+gclient = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
 game-io.path = "io"
 tokio = "1"
 xshell = "0.2"
