--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,21 +5,22 @@ version = "0.1.0"
 license = "MIT"
 edition = "2021"
 publish = false
-name = "pebbles-game"
 
 [package]
-name = "game"
+name = "pebble-game"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
 [dependencies]
 gstd.workspace = true
-game-io.workspace = true
+pebble-game-io.workspace = true
+parity-scale-codec.workspace = true
+scale-info.workspace = true
 
 [build-dependencies]
 gear-wasm-builder.workspace = true
-game-io.workspace = true
+pebble-game-io.workspace = true
 
 [dev-dependencies]
 gtest.workspace = true
@@ -32,14 +33,15 @@ tokio.workspace = true
 members = ["io"]
 
 [workspace.dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
-gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
-gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
-gclient = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
-game-io.path = "io"
+gstd = "1.4.1"
+gmeta = "1.4.1"
+gear-wasm-builder = "1.4.1"
+gtest = "1.4.1"
+gclient = "1.4.1"
+pebble-game-io.path = "io"
 tokio = "1"
 xshell = "0.2"
 anyhow = "1"
 parity-scale-codec = { version = "3", default-features = false }
 scale-info = { version = "2", default-features = false }
+
