--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tokio.workspace = true
 # It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
 # ignored by Cargo and won't be built.
 [workspace]
-# members = ["state", "xtask"]
+members = ["io"]
 
 [workspace.dependencies]
 gstd = "1.4.1"
